Поменял общие типы, подправил разные вещи по юзеру и токенам
