# src/api/services/user.services.ts
@@ -1,13 +1,23 @@
-import { BaseFindFilters, BaseFilters } from '../../entity/common/types';
-import { AbstractBaseService } from "../../core/AbstractBaseService";
-import { User } from "../../entity/User";
+import { BaseFilters } from '../../entity/common/types';
+import { AbstractBaseService } from "../../core/abstract-base-service";
+import { User } from "../../entity/user";
 
 export default class UserService extends AbstractBaseService<User> {
-  async getItem(filters: BaseFindFilters<User>) {
-    return this.repo.findOne(filters);
+  constructor() {
+    super(User);
   }
 
-  async getList(filters: BaseFilters<User>) {
-    return this.repo.find(filters);
+  async getList({
+    conditions
+  }: BaseFilters<User>) {
+    const items = this.repo.find({where: conditions});
+
+    return items;
+  }
+
+  async getItem({ conditions }: BaseFilters<User>) {
+    const item = this.repo.findOne({where: conditions});
+
+    return item;
   }
 }
